@@ -316,7 +316,7 @@ public class Relationship {
                 relationshipClazzName = Reporter.EXTRACT_VALUE("relationship", relationshipString) ;
                 Class relationshipClazz = Class.forName("PRSP.PrEPSTI.community.".concat(relationshipClazzName)) ;
 
-                Relationship relationship = (Relationship) relationshipClazz.newInstance();
+                Relationship relationship = (Relationship) relationshipClazz.getDeclaredConstructor().newInstance() ;
                 relationship.addAgents(agents.get(agentIndex0), agents.get(agentIndex1)) ;
                 NB_RELATIONSHIPS++ ;
                 relationship.setRelationshipId(relationshipId) ;
@@ -477,7 +477,8 @@ public class Relationship {
         report += "agentId1:" + Integer.toString(agent1.getAgentId()) + " " ;*/
         
         // return if neither Agent is infected
-        if ((!agent0.getInfectedStatus()) && (!agent1.getInfectedStatus()))
+        //if ((!agent0.getInfectedStatus()) && (!agent1.getInfectedStatus()))
+    	if ((agent0.getInfectedStatus() | agent1.getInfectedStatus()) == 0)
             return report ;
         
         // Loop through sexual contacts
@@ -491,8 +492,8 @@ public class Relationship {
             Site site1 = sites[1] ;
             
             // Are contact sites infected?
-            boolean infectStatus0 = site0.getInfectedStatus() ;
-            boolean infectStatus1 = site1.getInfectedStatus() ;
+            int infectStatus0 = site0.getInfectedStatus() ;
+            int infectStatus1 = site1.getInfectedStatus() ;
             // no risk of transmission if both sites have same infectStatus
             // Comment this out if interested in HIV prevention and other sexual practices
             if (infectStatus0 == infectStatus1) 
@@ -536,7 +537,7 @@ public class Relationship {
                     //	Agent.class, int.class, Site.class, Site.class ) ;
             // Method getInfectionMethod = Agent.class.getMethod("GET_INFECT_PROBABILITY", Agent.class,
                     //	Agent.class, int.class, Site.class, Site.class ) ;
-            if (infectStatus0) // && (infectStatus1 == 0))
+            if (infectStatus0 > 0) // && (infectStatus1 == 0))
             {
                 infectProbability*= MSM.GET_INFECT_PROBABILITY(site0, site1) ; 
                                 //(double) getInfectionMethod.
@@ -546,7 +547,7 @@ public class Relationship {
                 //site1.receive(infectName0,transmit0) ;
                 report += Reporter.ADD_REPORT_PROPERTY("transmission", Boolean.toString(agent1.receiveInfection(infectProbability,site1))) ;  
             }
-            else if (infectStatus1) // && (infectStatus0 == 0))    // agent1 must be infected
+            else if (infectStatus1 > 0) // && (infectStatus0 == 0))    // agent1 must be infected
             {
                 infectProbability*= MSM.GET_INFECT_PROBABILITY(site1, site0) ;
                 //infectProbability*= (double) getInfectionMethod.
